--- a/style.css
+++ b/style.css
@@ -38,8 +38,12 @@ footer {
 }
 .hero-img {
   width: 100%;
-  max-height: 350px;
-  object-fit: contain;   /* ← CLAVE: no corta la imagen */
-  background-color: #f4f6f8; /* relleno elegante si sobra espacio */
-  display: block;
+  height: 320px;
+  background-image: url("https://images.unsplash.com/photo-1548199973-03cce0bbc87b");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f4f6f8;
+  margin-bottom: 30px;
+}
 
